chore: Tests whether JVM warnings / messages on dynamic attach
Ref: #3459